# boucle

./: Cargo.toml  Cross.toml  DESIGN  README  README.md  meson.build
boucle/: Cargo.toml
boucle/src/: boucle.rs  buffers.rs  control_surface.rs  cpal_helpers.rs  event.rs  event_recorder.rs  lib.rs  op_sequence.rs  ops.rs  patterns.rs  piano_control.rs  tests.rs  units.rs
boucle/src/control_surface/: midi.rs
boucle/src/control_surface/midi/: op1.rs
cli/: Cargo.toml  boucle_cli.py
cli/src/: app_config.rs  app_error.rs  buffers.rs  cmd_batch.rs  cmd_list_ports.rs  cmd_live.rs  main.rs  tests.rs  wav.rs
cli/test_data/: ops.test
docker/: Dockerfile.arm
examples/: README.md
gst/: boucle.c  meson.build  plugin.c
lv2/: boucle.c  boucle.ttl  manifest.ttl  meson.build  op-heap.c  op-heap.h  ops.h
organelle/: Cargo.toml  README.md
organelle/data/: run.sh
organelle/src/: main.rs  patch_error.rs
rust/boucle/: Cargo.toml
rust/boucle/src/: boucle.rs  main.rs  ops.rs  tests.rs
src/: boucle.c  boucle.h  main.c  meson.build
tests/: meson.build  test_core.c  test_op_heap.c
vst/: Cargo.toml
vst/src/: lib.rs
