[package]
name = "boucle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We pin cpal version to work around https://github.com/RustAudio/cpal/issues/606
cpal = "=0.13.3"
dasp = "^0.11"
dyn-clone = "^1.0"
env_logger = "^0.9.0"
log = "^0.4"
