[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boucle = { path = "../boucle" }
clap = "2"
cpal = "^0.13"
dasp = "^0.11"
env_logger = "^0.9.0"
hound = "3.4.0"
log = "^0.4"
portmidi = "^0.2"
