[package]
name = "boucle_organelle"
version = "1.0.0"
edition = "2018"
include = ["data/*"]

[dependencies]
boucle = { path = "../boucle" }
clap = "2"
# We pin cpal version to work around https://github.com/RustAudio/cpal/issues/606
cpal = "=0.13.3"
env_logger = "^0.9.0"
log = "^0.4"
nannou_osc = { version = "0.17.0", optional = true }

[features]
default = ["organelle"]
organelle = ["nannou_osc"]

[[bin]]
name = "boucle_organelle"
required-features = ["organelle"]
