[package]
name = "boucle_organelle"
version = "1.0.0"
edition = "2018"
include = ["data/*"]

[dependencies]
boucle = { path = "../boucle" }
env_logger = "^0.9.0"
jack = { version = "^0.8.1", optional = true }
log = "^0.4"
nannou_osc = { version = "^0.17.0", optional = true }

[features]
default = ["organelle"]
organelle = ["jack", "nannou_osc"]

[[bin]]
name = "boucle_organelle"
required-features = ["organelle"]
